# StoragePilotAI

storagemind/: .gitignore  Cargo.toml  package-lock.json  package.json
storagemind/crates/sm-ai/: Cargo.toml
storagemind/crates/sm-ai/src/: downloader.rs  engine.rs  error.rs  lib.rs  text.rs  vision.rs  worker.rs
storagemind/crates/sm-cache/: Cargo.toml
storagemind/crates/sm-cache/src/: lib.rs  timed_cache.rs
storagemind/crates/sm-cleaner/: Cargo.toml
storagemind/crates/sm-cleaner/src/: cleaner.rs  error.rs  lib.rs  rules.rs
storagemind/crates/sm-config/: Cargo.toml
storagemind/crates/sm-config/src/: app_config.rs  error.rs  lib.rs
storagemind/crates/sm-database/: Cargo.toml
storagemind/crates/sm-database/src/: connection.rs  error.rs  lib.rs  migrate.rs  schema.rs
storagemind/crates/sm-database/src/repo/: file_repo.rs  mod.rs  search_repo.rs  settings_repo.rs  task_repo.rs
storagemind/crates/sm-index/: Cargo.toml
storagemind/crates/sm-index/src/: engine.rs  error.rs  lib.rs
storagemind/crates/sm-metadata/: Cargo.toml
storagemind/crates/sm-metadata/src/: audio.rs  error.rs  hash.rs  image.rs  lib.rs  processor.rs  worker.rs
storagemind/crates/sm-platform/: Cargo.toml
storagemind/crates/sm-platform/src/: drives.rs  error.rs  lib.rs  traits.rs
storagemind/crates/sm-platform/src/macos/: mod.rs
storagemind/crates/sm-scanner/: Cargo.toml
storagemind/crates/sm-scanner/src/: error.rs  file_classifier.rs  lib.rs  scanner.rs
storagemind/crates/sm-scheduler/: Cargo.toml
storagemind/crates/sm-scheduler/src/: error.rs  lib.rs  priority.rs  scheduler.rs  task_handle.rs
storagemind/crates/sm-search/: Cargo.toml
storagemind/crates/sm-thumbnail/: Cargo.toml
storagemind/crates/sm-thumbnail/src/: error.rs  generator.rs  lib.rs
storagemind/crates/sm-types/: Cargo.toml
storagemind/crates/sm-types/src/: error.rs  event.rs  file.rs  lib.rs  scan.rs  search.rs  task.rs
storagemind/crates/sm-watcher/: Cargo.toml
storagemind/crates/sm-watcher/src/: error.rs  lib.rs  watcher.rs
storagemind/src/: App.vue  main.ts  style.css
storagemind/src-tauri/: Cargo.toml  tauri.conf.json
storagemind/src-tauri/src/: lib.rs  main.rs  state.rs
storagemind/src-tauri/src/commands/: ai.rs  cleaner.rs  drives.rs  files.rs  metadata.rs  mod.rs  scan.rs  search.rs  settings.rs
storagemind/src/components/layout/: AppShell.vue  ScanProgress.vue  Sidebar.vue  Topbar.vue
storagemind/src/views/: Analyzer.vue  Cleaner.vue  Dashboard.vue  Duplicates.vue  Explorer.vue  LargeFiles.vue  Search.vue  Settings.vue
wiki/: reademe.txt
