[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/sm-types",
    "crates/sm-database",
    "crates/sm-platform",
    "crates/sm-scheduler",
    "crates/sm-scanner",
    "crates/sm-index",
    "crates/sm-watcher",
    "crates/sm-search",
    "crates/sm-thumbnail",
    "crates/sm-cleaner",
    "crates/sm-cache",
    "crates/sm-config",
    "crates/sm-metadata",
    "crates/sm-ai",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["StorageMind Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Parallel processing
rayon = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# File system
notify = "6"
walkdir = "2"
glob = "0.3"

# Path handling
dunce = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Hashing
blake3 = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Channels
crossbeam-channel = "0.5"
flume = "0.11"

# Collections
dashmap = "5"
indexmap = { version = "2", features = ["serde"] }

# Config
toml = "0.8"
dirs = "5"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }

# Tauri (for src-tauri crate)
tauri = { version = "2" }
tauri-plugin-opener = "2"

# Internal crates
sm-types = { path = "crates/sm-types" }
sm-database = { path = "crates/sm-database" }
sm-platform = { path = "crates/sm-platform" }
sm-scheduler = { path = "crates/sm-scheduler" }
sm-scanner = { path = "crates/sm-scanner" }
sm-index = { path = "crates/sm-index" }
sm-watcher = { path = "crates/sm-watcher" }
sm-search = { path = "crates/sm-search" }
sm-thumbnail = { path = "crates/sm-thumbnail" }
sm-cleaner = { path = "crates/sm-cleaner" }
sm-cache = { path = "crates/sm-cache" }
sm-config = { path = "crates/sm-config" }
sm-metadata = { path = "crates/sm-metadata" }
sm-ai = { path = "crates/sm-ai" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
