[package]
name = "sm-database"
version.workspace = true
edition.workspace = true
description = "StorageMind database layer — SQLite + FTS5 + sqlite-vec"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = "0.1.1"
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sm-types = { workspace = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "test_vec"
path = "src/bin/test_vec.rs"
