[package]
name = "sm-platform"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sm-types = { workspace = true }
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
# future: libc, core-foundation

[target.'cfg(target_os = "windows")'.dependencies]
# future: windows-sys
